RESOLVED FIXED276900
Potential UI hang under IPC::Connection::dispatchIncomingMessages()
https://bugs.webkit.org/show_bug.cgi?id=276900
Summary Potential UI hang under IPC::Connection::dispatchIncomingMessages()
Chris Dumez
Reported 2024-07-22 13:03:06 PDT
Potential UI hang under IPC::Connection::dispatchIncomingMessages(): ``` __CFRunLoopDoSource0 (in CoreFoundation) __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ (in CoreFoundation) WTF::RunLoop::performWork(void*) (in JavaScriptCore) WTF::RunLoop::performWork() (in JavaScriptCore) IPC::Connection::dispatchIncomingMessages() (in WebKit) WTF::LockAlgorithm<unsigned char, (unsigned char)1, (unsigned char)2, WTF::EmptyLockHooks<unsigned char>>::lockSlow(WTF::Atomic<unsigned char>&) (in JavaScriptCore) ```
Attachments
Chris Dumez
Comment 1 2024-07-22 13:03:14 PDT
Chris Dumez
Comment 2 2024-07-22 13:05:05 PDT
EWS
Comment 3 2024-07-22 20:24:15 PDT
Committed 281223@main (07cee55ea03c): <https://commits.webkit.org/281223@main> Reviewed commits have been landed. Closing PR #31076 and removing active labels.
EWS
Comment 4 2024-07-23 17:29:56 PDT
Committed 280938.110@safari-7619-branch (0d427282151e): <https://commits.webkit.org/280938.110@safari-7619-branch> Reviewed commits have been landed. Closing PR #1475 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.