Potential UI hang under IPC::Connection::dispatchIncomingMessages() https://bugs.webkit.org/show_bug.cgi?id=276900 rdar://132123087

Reviewed by Brady Eidson.

Use an UnfairLock for IPC::Connection::m_incomingMessagesLock instead
of a WTF::Lock to get priority inheritance.

* Source/WTF/wtf/Lock.h:
(WTF::WTF_ASSERTS_ACQUIRED_LOCK):
* Source/WebKit/Platform/IPC/Connection.cpp:
(IPC::Connection::SyncMessageState::processIncomingMessage):
(IPC::Connection::enqueueIncomingMessage):
(IPC::Connection::dispatcher):
* Source/WebKit/Platform/IPC/Connection.h:

Canonical link: https://commits.webkit.org/281223@main